--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="log_in_line_color">#B2B2B3</color>
 
     <color name="invisible">#00000000</color>
+    <color name="button_edit_contacts_gradient">#50FB5E06</color>
 
     <color name="primary_brightest_text_font">#FAFAFA</color>
     <color name="the_brightest_font">#FFFFFF</color>
