--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -72,5 +72,50 @@
         <item name="android:background">@drawable/button_contacts</item>
         <item name="android:textColor">@color/the_brightest_font</item>
     </style>
+    <style name="google_button_style" parent="@style/Theme.MaterialComponents">
+        <item name="android:backgroundTint">@color/button_google_background</item>
+        <item name="android:shape">oval</item>
+
+        <item name="iconTint">@color/invisible</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconTintMode">add</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetTop">0dp</item>
+
+        <item name="android:textColor">@color/primary_dark_text_font</item>
+        <item name="fontWeight">@dimen/primary_font_weight</item>
+        <item name="android:textSize">@dimen/big_button_text_size</item>
+        <item name="android:letterSpacing">@dimen/space_letters</item>
+    </style>
+
+
+    <style name="register_button_style" parent="text_big_button_style">
+        <item name="android:background">@drawable/button_register</item>
+        <item name="android:textColor">@color/primary_brightest_text_font</item>
+    </style>
+
+
+    <style name="hint_style" parent="@style/TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/medium_text_size</item>
+    </style>
+
+    <style name="error_style" parent="@style/TextAppearance.MaterialComponents.Headline1">
+        <item name="android:textSize">@dimen/smallest_text_size</item>
+        <item name="fontWeight">@dimen/smaller_font_weight</item>
+        <item name="android:gravity">top</item>
+        <item name="android:textColor">@color/error_color</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+
+    <style name="TextInputLayout_style" parent="Theme.MyApp">
+        <item name="expandedHintEnabled">false</item>
+        <item name="hintTextAppearance">@style/hint_style</item>
+        <!-- without hintTextColor become black when textInputLayout is focused  -->
+        <item name="hintTextColor">@color/primary_bright_text_font</item>
+        <item name="android:textColorHint">@color/primary_bright_text_font</item>
+        <item name="errorEnabled">true</item>
+        <item name ="errorTextAppearance">@style/error_style</item>
+    </style>
 
 </resources>
