--- a/app/src/main/res/drawable/button_contacts.xml
+++ b/app/src/main/res/drawable/button_contacts.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="@dimen/radius_button" />
+            <corners android:radius="@dimen/size_radius_button" />
             <solid android:color="@color/button_color_contacts_register" />
         </shape>
     </item>
