--- a/app/src/main/res/drawable/main_full_insta.xml
+++ b/app/src/main/res/drawable/main_full_insta.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/vector_facebook"
+    <item android:drawable="@drawable/main_vector_facebook"
         android:gravity="center"/>
-    <item android:drawable="@drawable/ellipse"
+    <item android:drawable="@drawable/main_ellipse"
         android:gravity="center"/>
 </layer-list>
