--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- default text styles for different fontWeights under 28 api   -->
-    <style name="primary_text_style">
+    <style name="primary_text_style" parent="@style/TextAppearance.AppCompat">
         <item name="android:fontFamily">@font/open_sans</item>
         <item name="android:fontWeight">600</item>
 <!--        <item name="android:fontWeight">@dimen/weight_font_primary</item>-->
     </style>
 
-    <style name="primary_light_text_style">
+    <style name="primary_light_text_style" parent="@style/TextAppearance.AppCompat">
         <item name="android:fontFamily">@font/open_sans</item>
         <item name="android:fontWeight">400</item>
 <!--        <item name="android:fontWeight">@dimen/weight_font_smaller</item>-->
