--- a/app/src/main/res/values-v28/styles.xml
+++ b/app/src/main/res/values-v28/styles.xml
@@ -2,13 +2,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- default text styles for different fontWeights since 28 api   -->
-    <style name="primary_text_style" parent="Theme.MyApp">
+    <style name="primary_text_style" parent="@style/TextAppearance.AppCompat">
         <item name="android:fontFamily">@font/open_sans</item>
         <item name="android:textFontWeight">600</item>
 <!--        <item name="android:textFontWeight">@dimen/weight_font_primary</item>-->
     </style>
 
-    <style name="primary_light_text_style" parent="Theme.MyApp">
+    <style name="primary_light_text_style" parent="@style/TextAppearance.AppCompat">
         <item name="android:fontFamily">@font/open_sans</item>
         <item name="android:textFontWeight">400</item>
 <!--        <item name="android:textFontWeight">@dimen/weight_font_smaller</item>-->
