--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -42,7 +42,7 @@
         android:layout_height="@dimen/height_log_out_button"
         android:layout_marginEnd="@dimen/margin_log_out_button"
 
-        android:background="@drawable/button_logout"
+        android:background="@drawable/main_button_logout"
         android:textAppearance="@style/TextAppearance_bt_log_out"
         android:text="@string/main_log_out"
         
@@ -98,7 +98,7 @@
         android:layout_marginBottom="@dimen/margin_top_user_name"
         android:text="@string/main_user_career"
 
-        android:textAppearance="@style/light_medium_text_style"
+        android:textAppearance="@style/TextAppearance_light_medium_text"
         app:layout_constraintBottom_toTopOf="@id/tv_main_user_address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
 
         android:text="@string/main_user_address"
-        android:textAppearance="@style/light_medium_text_style"
+        android:textAppearance="@style/TextAppearance_light_medium_text"
 
         app:layout_constraintBottom_toBottomOf="@id/v_main_top"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_social_networks"
-        android:src="@drawable/full_fb"
+        android:src="@drawable/main_full_fb"
         app:layout_constraintBottom_toTopOf="@id/bt_main_edit"
         app:layout_constraintEnd_toStartOf="@id/iv_main_linkedin"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -135,7 +135,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin_social_networks"
-        android:src="@drawable/full_ln"
+        android:src="@drawable/main_full_ln"
         app:layout_constraintBottom_toTopOf="@id/bt_main_edit"
         app:layout_constraintEnd_toStartOf="@id/iv_main_instagram"
         app:layout_constraintStart_toEndOf="@id/iv_main_facebook"
@@ -148,7 +148,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_social_networks"
         android:scaleType="centerCrop"
-        android:src="@drawable/full_insta"
+        android:src="@drawable/main_full_insta"
         app:layout_constraintBottom_toTopOf="@id/bt_main_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_main_linkedin"
@@ -160,7 +160,7 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/height_edit_button"
         android:layout_marginVertical="@dimen/margin_edit_button"
-        android:background="@drawable/button_edit"
+        android:background="@drawable/main_bt_edit"
 
         android:text="@string/main_edit_user_profile"
         android:textAppearance="@style/TextAppearance_bt_edit_profile"
@@ -178,7 +178,7 @@
         android:layout_height="@dimen/height_view_contact_button"
         android:layout_marginVertical="@dimen/margin_view_contact_button"
 
-        android:background="@drawable/button_contacts"
+        android:background="@drawable/main_button_contacts"
         android:text="@string/main_user_contacts"
         android:textAppearance="@style/TextAppearance_bt_contact"
 
